--- a/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
+++ b/docs/ssjs/ssjs-snippet-ssjs-script-template.mdx
@@ -34,7 +34,9 @@ Some like to start with a blank slate. Some - from a well-crafted template. I'm 
     // Uncomment below if you will be using SOAP API via WSProxy in the script
     // var soap = new Script.Util.WSProxy();
 
+    /* ----------------------------------------------------------------------- */
     /* ---------------------- 1. GLOBAL VARIABLES ---------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     var endpoint, headerNames, headerValues, payload, response, parsedResponse;
     var debugging = false;
@@ -49,7 +51,9 @@ Some like to start with a blank slate. Some - from a well-crafted template. I'm 
     var errorDE = 'ERROR_DATA_EXTENSION';
     var errorURL = 'ERROR_CLOUD_PAGE_URL';
 
+    /* ----------------------------------------------------------------------- */
     /* ---------------------- 2. HELPER FUNCTIONS ---------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     /* ---------------------- 2.1. Debugging --------------------------------- */
 
@@ -83,7 +87,9 @@ Some like to start with a blank slate. Some - from a well-crafted template. I'm 
     };
 
     try {
-    /* -------------------- 3. {{SECTION NAME}} ------------------------- */
+    /* ----------------------------------------------------------------------- */
+    /* ----------------------- 3. {{SECTION NAME}} --------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     /**
     * There can be just one section for simpler scripts, or there can be multiple.
@@ -131,7 +137,9 @@ Read more on that approach in my [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx
 ### Global Variables
 
 ```js
+    /* ----------------------------------------------------------------------- */
     /* ---------------------- 1. GLOBAL VARIABLES ---------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     var endpoint, headerNames, headerValues, payload, response, parsedResponse;
     var debugging = false;
@@ -187,7 +195,9 @@ The template contains the API Endpoint section that I frequently use, but if you
 ### Helper Functions
 
 ```js
+    /* ----------------------------------------------------------------------- */
     /* ---------------------- 2. HELPER FUNCTIONS ---------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     /* ---------------------- 2.1. Debugging --------------------------------- */
 
@@ -245,7 +255,9 @@ I prefix all functions with [documentation comments](../ssjs/ssjs-style-guide.md
 
 ```js
     try {
-    /* -------------------- 3. {{SECTION NAME}} ------------------------- */
+    /* ----------------------------------------------------------------------- */
+    /* ----------------------- 3. {{SECTION NAME}} --------------------------- */
+    /* ----------------------------------------------------------------------- */
 
     /**
     * There can be just one section for simpler scripts, or there can be multiple.
