--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -402,17 +402,23 @@ To fully leverage the pseudo-code table of contents, add section comments to mar
 For complex scripts, it might be a good idea to create few different levels of such comments. I use upper case with dashes for the first level, title case with dashes for the second level and only title case for the third level of comments
 
 ```js
-/* ---------------------- 1. GLOBAL VARIABLES ----------------------- */
+/* ----------------------------------------------------------------------- */
+/* ------------------------- 1. GLOBAL VARIABLES ------------------------- */
+/* ----------------------------------------------------------------------- */
 
-/* ---------------------- 2. HELPER FUNCTIONS ----------------------- */
+/* ----------------------------------------------------------------------- */
+/* ------------------------- 2. HELPER FUNCTIONS ------------------------- */
+/* ----------------------------------------------------------------------- */
 
-/* ---------------------- 2.1. Error handling ----------------------- */
+/* ------------------------- 2.1. Error handling ------------------------- */
 
-/* ---------------------- 3. AUTHENTICATION FLOW -------------------- */
+/* ----------------------------------------------------------------------- */
+/* ------------------------- 3. AUTHENTICATION FLOW ---------------------- */
+/* ----------------------------------------------------------------------- */
 
-/* ---------------------- 3.1. Authorisation ------------------------ */
+/* ------------------------- 3.1. Authorisation -------------------------- */
 
-/* ---------------------- 3.2. Authentication ----------------------- */
+/* ------------------------- 3.2. Authentication ------------------------- */
 
 /* 3.2.1. Build token request payload */
 ```
